feat (all-service): commit version 1.0